EPOS/Microsoft Visual Basic/Example VB 2010 64-Bit/Definitions.vb

Option Strict Off
Option Explicit On
Module Module1

'*********************************************************************
'                   maxon motor ag, CH-6072 Sachseln
'*********************************************************************
'
' File:             Definitions.vb
'
' Description:      Function definitions for EposCmd64.dll library for Developer Platform Microsoft Visual Basic
'
' Dev. Platform:    Microsoft Visual Basic 2010
'
' Target:           Windows 64-Bit Operating Systems
'
' Written by:       maxon motor ag, CH-6072 Sachseln
'
' History:          See chapter History in the document EPOS Command Library
'
' Copyright © 2003 - 2021, maxon motor ag.
' All rights reserved.
'*********************************************************************

' --------------------------------------------------------------------------
'                   IMPORTED FUNCTIONS PROTOTYPE
' --------------------------------------------------------------------------

'*************************************************************************************************************************************
' INITIALISATION FUNCTIONS
'************************************************************************************************************************************/

'Communication
Declare Function VCS_OpenDevice Lib "EposCmd64.dll" Alias "VCS_OpenDevice" (ByVal DeviceName As String, ByVal ProtocolStackName As String, ByVal InterfaceName As String, ByVal PortName As String, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_OpenDeviceDlg Lib "EposCmd64.dll" Alias "VCS_OpenDeviceDlg" (ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetProtocolStackSettings Lib "EposCmd64.dll" Alias "VCS_SetProtocolStackSettings" (ByVal KeyHandle As Integer, ByVal Baudrate As UInteger, ByVal Timeout As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetProtocolStackSettings Lib "EposCmd64.dll" Alias "VCS_GetProtocolStackSettings" (ByVal KeyHandle As Integer, ByRef pBaudrate As UInteger, ByRef pTimeout As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_FindDeviceCommunicationSettings Lib "EposCmd64.dll" Alias "VCS_FindDeviceCommunicationSettings" (ByRef KeyHandle As Integer, ByVal pDeviceName As String, ByVal pProtocolStackName As String, ByVal pInterfaceName As String, ByVal pPortName As String, ByVal SizeName As UShort, ByRef pBaudrate As UInteger, ByRef pTimeout As UInteger, ByRef pNodeId As UShort, ByVal DialogMode As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_CloseAllDevices Lib "EposCmd64.dll" Alias "VCS_CloseAllDevices" (ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_CloseDevice Lib "EposCmd64.dll" Alias "VCS_CloseDevice" (ByVal KeyHandle As Integer, ByRef pErrorCode As UInteger) As Integer

'Gateway
Declare Function VCS_SetGatewaySettings Lib "EposCmd64.dll" Alias "VCS_SetGatewaySettings" (ByVal KeyHandle As Integer, ByVal Baudrate As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetGatewaySettings Lib "EposCmd64.dll" Alias "VCS_GetGatewaySettings" (ByVal KeyHandle As Integer, ByRef pBaudrate As UInteger, ByRef pErrorCode As UInteger) As Integer

'Subdevice
Declare Function VCS_OpenSubDevice Lib "EposCmd64.dll" Alias "VCS_OpenSubDevice" (ByVal DeviceHandle As Integer, ByVal DeviceName As String, ByVal ProtocolStackName As String, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_OpenSubDeviceDlg Lib "EposCmd64.dll" Alias "VCS_OpenSubDeviceDlg" (ByVal DeviceHandle As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_FindSubDeviceCommunicationSettings Lib "EposCmd64.dll" Alias "VCS_FindSubDeviceCommunicationSettings" (ByVal DeviceHandle As Integer, ByRef pKeyHandle As Integer, ByVal pDeviceName As String, ByVal pProtocolStackName As String, ByVal SizeName As UShort, ByRef pBaudrate As UInteger, ByRef pNodeId As UShort, ByVal DialogMode As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_CloseSubDevice Lib "EposCmd64.dll" Alias "VCS_CloseSubDevice" (ByVal KeyHandle As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_CloseAllSubDevices Lib "EposCmd64.dll" Alias "VCS_CloseAllSubDevices" (ByVal DeviceHandle As Integer, ByRef pErrorCode As UInteger) As Integer

'Info
Declare Function VCS_GetDriverInfo Lib "EposCmd64.dll" Alias "VCS_GetDriverInfo" (ByVal pLibraryName As String, ByVal MaxStrNameSize As UShort, ByVal pLibraryVersion As String, ByVal MaxStrVersionSize As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetVersion Lib "EposCmd64.dll" Alias "VCS_GetVersion" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pHardwareVersion As UShort, ByRef pSoftwareVersion As UShort, ByRef pApplicationNumber As UShort, ByRef pApplicationVersion As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetErrorInfo Lib "EposCmd64.dll" Alias "VCS_GetErrorInfo" (ByVal ErrorCodeValue As Integer, ByVal pErrorInfo As String, ByVal MaxStrSize As UShort) As Integer

'Advanced Functions
Declare Function VCS_GetDeviceNameSelection Lib "EposCmd64.dll" Alias "VCS_GetDeviceNameSelection" (ByVal StartOfSelection As Integer, ByVal pDeviceNameSel As String, ByVal MaxStrSize As UShort, ByRef pEndOfSelection As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetProtocolStackNameSelection Lib "EposCmd64.dll" Alias "VCS_GetProtocolStackNameSelection" (ByVal DeviceName As String, ByVal StartOfSelection As Integer, ByVal pProtocolStackNameSel As String, ByVal MaxStrSize As UShort, ByRef pEndOfSelection As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetInterfaceNameSelection Lib "EposCmd64.dll" Alias "VCS_GetInterfaceNameSelection" (ByVal DeviceName As String, ByVal ProtocolStackName As String, ByVal StartOfSelection As Integer, ByVal pInterfaceNameSel As String, ByVal MaxStrSize As UShort, ByRef pEndOfSelection As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPortNameSelection Lib "EposCmd64.dll" Alias "VCS_GetPortNameSelection" (ByVal DeviceName As String, ByVal ProtocolStackName As String, ByVal InterfaceName As String, ByVal StartOfSelection As Integer, ByVal pPortSel As String, ByVal MaxStrSize As UShort, ByRef pEndOfSelection As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ResetPortNameSelection Lib "EposCmd64.dll" Alias "VCS_ResetPortNameSelection" (ByVal DeviceName As String, ByVal ProtocolStackName As String, ByVal InterfaceName As String, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetBaudrateSelection Lib "EposCmd64.dll" Alias "VCS_GetBaudrateSelection" (ByVal DeviceName As String, ByVal ProtocolStackName As String, ByVal InterfaceName As String, ByVal PortName As String, ByVal StartOfSelection As Integer, ByRef pBaudrateSel As Integer, ByRef pEndOfSelection As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetKeyHandle Lib "EposCmd64.dll" Alias "VCS_GetKeyHandle" (ByVal DeviceName As String, ByVal ProtocolStackName As String, ByVal InterfaceName As String, ByVal PortName As String, ByRef pKeyHandle As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetDeviceName Lib "EposCmd64.dll" Alias "VCS_GetDeviceName" (ByVal KeyHandle As Integer, ByVal pDeviceName As String, ByVal MaxStrSize As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetProtocolStackName Lib "EposCmd64.dll" Alias "VCS_GetProtocolStackName" (ByVal KeyHandle As Integer, ByVal pProtocolStackName As String, ByVal MaxStrSize As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetInterfaceName Lib "EposCmd64.dll" Alias "VCS_GetInterfaceName" (ByVal KeyHandle As Integer, ByVal pInterfaceName As String, ByVal MaxStrSize As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPortName Lib "EposCmd64.dll" Alias "VCS_GetPortName" (ByVal KeyHandle As Integer, ByVal pPortName As String, ByVal MaxStrSize As UShort, ByRef pErrorCode As UInteger) As Integer

'*************************************************************************************************************************************
' CONFIGURATION FUNCTIONS
'************************************************************************************************************************************/

'General
Declare Function VCS_ImportParameter Lib "EposCmd64.dll" Alias "VCS_ImportParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal pParameterFileName As String, ByVal ShowDlg As Integer, ByVal ShowMsg As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ExportParameter Lib "EposCmd64.dll" Alias "VCS_ExportParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal pParameterFileName As String, ByVal pFirmwareFileName As String, ByVal pUserID As String, ByVal pComment As String, ByVal ShowDlg As Integer, ByVal ShowMsg As Integer, ByRef pErrorCode As UInteger) As Integer

Declare Function VCS_SetObject Lib "EposCmd64.dll" Alias "VCS_SetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef Data As SByte, ByVal NbOfBytesToWrite As Integer, ByRef pNbOfBytesWritten As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetObject Lib "EposCmd64.dll" Alias "VCS_SetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef Data As Integer, ByVal NbOfBytesToWrite As Integer, ByRef pNbOfBytesWritten As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetObject Lib "EposCmd64.dll" Alias "VCS_SetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef Data As Long, ByVal NbOfBytesToWrite As Integer, ByRef pNbOfBytesWritten As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetObject Lib "EposCmd64.dll" Alias "VCS_SetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef Data As Byte, ByVal NbOfBytesToWrite As Integer, ByRef pNbOfBytesWritten As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetObject Lib "EposCmd64.dll" Alias "VCS_SetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef Data As UShort, ByVal NbOfBytesToWrite As Integer, ByRef pNbOfBytesWritten As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetObject Lib "EposCmd64.dll" Alias "VCS_SetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef Data As UInteger, ByVal NbOfBytesToWrite As Integer, ByRef pNbOfBytesWritten As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetObject Lib "EposCmd64.dll" Alias "VCS_SetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef Data As ULong, ByVal NbOfBytesToWrite As Integer, ByRef pNbOfBytesWritten As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetObject Lib "EposCmd64.dll" Alias "VCS_SetObject" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByRef Data As String, ByVal NbOfBytesToWrite As Integer, ByRef pNbOfBytesWritten As Integer, ByRef pErrorCode As UInteger) As Integer
